--- a/index.html
+++ b/index.html
@@ -24,3 +24,7 @@
     <path d="M86,50 78,54 78,46Z" fill="rgba(0,0,0,0.8)" onclick="alert('RIGHT');" />
   </svg>
 </div>
+
+<nav>
+  <a href="./canvas.html">+ canvas</a>
+</nav>
